<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gzd.androiddialog.MainActivity">

    <Button
        android:id="@+id/button_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_normal"
        />
    <Button
        android:id="@+id/button_multi_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_multi_btn"/>
    <Button
        android:id="@+id/button_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_list"
        />
    <Button
        android:id="@+id/button_single_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_single_choice"
        />
    <Button
        android:id="@+id/button_multi_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_multi_choice"
        />
    <Button
        android:id="@+id/button_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_input"/>
    <Button
        android:id="@+id/button_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_progress"
        />
    <Button
        android:id="@+id/button_waiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_waiting"
        />
    <Button
        android:id="@+id/button_customize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_customize"
        />
</LinearLayout>
